fix jump rm assets

--- a/src/style.css
+++ b/src/style.css
@@ -533,6 +533,10 @@ a.app-tooltip__name:hover {
   }
 }
 
+#alex.is-touch-open img {
+  animation: alex-jump 0.4s ease 1;
+}
+
 @keyframes alex-jump {
   0%, 100% { transform: translateY(0) rotate(0deg); }
   40% { transform: translateY(-6%) rotate(-1.5deg); }
